<resources>
    <string name="app_name">Login</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="UserName">Username</string>
    <string name="Password">Password</string>
    <string name="LoginButton">Log in</string>
    <string name="title_activity_add_account">AddAccount</string>
    <string name="RegisterButton">Register</string>
    <string name="title_activity_register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="EmailAddress">Email Address</string>
    <string name="IDNumber">ID Number</string>
    <string name="Department">Department</string>
</resources>